--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -38,9 +38,8 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Vaibhav Yadav</h1>
+      
+      <h1 class="sitename">VAIBHAV YADAV</h1>
     </a> 
 
     <div class="social-links text-center">
@@ -386,7 +385,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>226022 Lucknow, India</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -394,7 +393,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>+91 8418978478</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -402,7 +401,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <p>yadavvaibhavkmr@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
